# LBCS

./: .gitignore  Dockerfile  README.md  docker-compose.yml  init_postgres.sh  package-lock.json  package.json
.env/: app  db
.github/workflows/: master_lbcs.yml
.mypy_cache/3.8/: _ast.data.json  _ast.meta.json  _compression.data.json  _compression.meta.json  _csv.data.json  _csv.meta.json  _curses.data.json  _curses.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _random.data.json  _random.meta.json  _thread.data.json  _thread.meta.json  _types.data.json  _types.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  abc.data.json  abc.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  atexit.data.json  atexit.meta.json  base64.data.json  base64.meta.json  binascii.data.json  binascii.meta.json  builtins.data.json  builtins.meta.json  calendar.data.json  calendar.meta.json  codecs.data.json  codecs.meta.json  (+96 more)
.mypy_cache/3.8/asyncio/: __init__.data.json  __init__.meta.json  base_events.data.json  base_events.meta.json  coroutines.data.json  coroutines.meta.json  events.data.json  events.meta.json  exceptions.data.json  exceptions.meta.json  futures.data.json  futures.meta.json  locks.data.json  locks.meta.json  protocols.data.json  protocols.meta.json  queues.data.json  queues.meta.json  runners.data.json  runners.meta.json  selector_events.data.json  selector_events.meta.json  streams.data.json  streams.meta.json  subprocess.data.json  subprocess.meta.json  tasks.data.json  tasks.meta.json  transports.data.json  (+3 more)
backend/: .boot.sh  :wq  Dockerfile  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  tox.ini
backend/backend/: graphql_schema.py  models.py  settings.py  settings_prd.py  urls.py
backend/problems/: admin.py  graphql_schema.py  models.py  types.py
backend/problems/migrations/: 0001_initial.py
backend/users/: admin.py  auth.py  graphql_schema.py  models.py  mutations.py  types.py
backend/users/migrations/: 0001_initial.py
client/: package-lock.json  package.json
client/src/: App.js
lbcsClient/: .gitignore  App.tsx  api.tsx  app.json  codegen.yml  helpers.ts  package-lock.json  package.json  storage.ts
lbcsClient/components/: Cell.tsx  Grid.tsx  ImagePickerModal.tsx  LoadProblemModal.tsx  LoadWallModal.tsx  Row.tsx  Settings.tsx  WallManager.tsx
lbcsClient/graphql/: apolloClient.ts  generated.tsx
lbcsClient/hooks/: useDebounce.tsx
ledserver/: .boot.sh  Dockerfile  pyproject.toml  setup.py  tox.ini
ledserver/lbcs/: README.md  config.py  example_config.ini  gridWebSocket.js  index.html  lbcs.service  server.py  test_handlers.py
ledserver/lbcs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ledserver/pip-wheel-metadata/lbcs-0.13.0.dist-info/: METADATA  entry_points.txt
src/: App.js
(+163 files in other folders)
