[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kees van Ekeren <kg.v.ekeren@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.2"
graphene = "^2.1.8"
graphene-django = "^2.13.0"
django-filter = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
mypy = "^0.782"
flake8 = "^3.8.4"
black = "^20.8b1"
pytest-django = "^3.10.0"
django-extensions = "^3.0.9"
psycopg2-binary = "^2.8.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
