[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kees van Ekeren <kg.v.ekeren@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "4.0.4"
django-filter = "^2.4.0"
django-extensions = "^3.0.9"
psycopg2-binary = "^2.8.6"
whitenoise = "^5.3.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
mypy = "^0.782"
flake8 = "^3.8.4"
black = "^20.8b1"
pytest-django = "^3.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
