[tool.poetry]
name = "lbcs"
version = "0.11.0"
description = "A small async server for processing led commands to AdaFruit Neopixels"
authors = ["Kees van Ekeren <kg.v.ekeren@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tornado = "^6.0.4"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
mypy = "^0.770"
black = "^19.10b0"
flake8 = "^3.7.9"
ipython = "^7.16.1"
pytest = "^5.4.3"

[tool.poetry.scripts]
lbcs-server = 'lbcs.server:main'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap= 0
use_parentheses = true
sline_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

